[package]
name = "rcron"
version = "1.2.2"
edition = "2021"
authors = ["daheige"]
description = "a simple cron job scheduling for rust"
keywords = ["cron", "crontab", "scheduler", "job","task"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rs-god/rcron"
documentation = "https://docs.rs/rcron/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cron = "0.12.0"
chrono = "0.4.24"
uuid = { version = "1.3.1", features = ["v4"] }
